Fix rotating text: proper span structure with fixed heights

--- a/ri-report.html
+++ b/ri-report.html
@@ -94,22 +94,28 @@
  .rotating-text {
    display: inline-block;
    position: relative;
-   height: 1.5em;
+   height: 1.4em;
    overflow: hidden;
    vertical-align: bottom;
+   text-align: left;
  }
- .rotating-text span {
+ .rotating-text .words {
    display: block;
+   animation: rotateWords 15s infinite;
+ }
+ .rotating-text .words span {
+   display: block;
+   height: 1.4em;
+   line-height: 1.4em;
    color: #22d3ee;
    font-weight: 600;
-   animation: rotateWords 15s infinite;
  }
  @keyframes rotateWords {
    0%, 18% { transform: translateY(0); }
-   20%, 38% { transform: translateY(-100%); }
-   40%, 58% { transform: translateY(-200%); }
-   60%, 78% { transform: translateY(-300%); }
-   80%, 98% { transform: translateY(-400%); }
+   20%, 38% { transform: translateY(-1.4em); }
+   40%, 58% { transform: translateY(-2.8em); }
+   60%, 78% { transform: translateY(-4.2em); }
+   80%, 98% { transform: translateY(-5.6em); }
    100% { transform: translateY(0); }
  }
  @media (max-width: 768px) {
@@ -347,7 +353,7 @@
  <div class="hero" style="padding:2rem 2rem 1.5rem">
  <h1 class="shimmer-title">Rhode Island Real Estate Hub</h1>
 
- <p class="hero-tagline">Your source for <span class="rotating-text"><span>market data<br>price comps<br>deal hunting<br>trend analysis<br>local insights</span></span></p>
+ <p class="hero-tagline">Your source for <span class="rotating-text"><span class="words"><span>market data</span><span>price comps</span><span>deal hunting</span><span>trend analysis</span><span>local insights</span></span></span></p>
 
  <p class="subtitle" id="heroSubtitle" style="margin-top:1rem">36,000+ MLS Listings • 77 Towns • Updated Daily</p>
  </div>
