Fix rotating text animation - use percentages, 10s cycle

--- a/ri-report.html
+++ b/ri-report.html
@@ -94,28 +94,28 @@
  .rotating-text {
    display: inline-block;
    position: relative;
-   height: 1.4em;
+   height: 1.5em;
    overflow: hidden;
    vertical-align: bottom;
    text-align: left;
  }
  .rotating-text .words {
    display: block;
-   animation: rotateWords 15s infinite;
+   animation: rotateWords 10s ease infinite;
  }
  .rotating-text .words span {
    display: block;
-   height: 1.4em;
-   line-height: 1.4em;
+   height: 1.5em;
+   line-height: 1.5;
    color: #22d3ee;
    font-weight: 600;
  }
  @keyframes rotateWords {
-   0%, 18% { transform: translateY(0); }
-   20%, 38% { transform: translateY(-1.4em); }
-   40%, 58% { transform: translateY(-2.8em); }
-   60%, 78% { transform: translateY(-4.2em); }
-   80%, 98% { transform: translateY(-5.6em); }
+   0%, 19% { transform: translateY(0); }
+   20%, 39% { transform: translateY(-20%); }
+   40%, 59% { transform: translateY(-40%); }
+   60%, 79% { transform: translateY(-60%); }
+   80%, 99% { transform: translateY(-80%); }
    100% { transform: translateY(0); }
  }
  @media (max-width: 768px) {
