Compact 3D chart colorbar - reduce gap

--- a/ri-3d-scatter.html
+++ b/ri-3d-scatter.html
@@ -292,7 +292,7 @@
                 colorscale: 'RdYlBu_r',
                 cmin: 150,
                 cmax: 450,
-                colorbar: { title: '$/sqft', tickprefix: '$' },
+                colorbar: { title: '$/sqft', tickprefix: '$', len: 0.6, thickness: 15, x: 1.02, xpad: 5 },
                 opacity: 0.8
             }
         };
