--- a/ri-report.html
+++ b/ri-report.html
@@ -783,24 +783,9 @@
  </div>
  </div>
 
- <h2>Property Characteristics</h2>
- <div class="chart-grid">
- <div class="chart-card">
- <div class="chart-title">Bedroom Distribution</div>
- <div style="position:relative;height:250px"><canvas id="bedsChart"></canvas></div>
- </div>
- <div class="chart-card">
- <div class="chart-title">Year Built Distribution</div>
- <div style="position:relative;height:250px"><canvas id="yearBuiltChart"></canvas></div>
- </div>
- <div class="chart-card">
- <div class="chart-title">Square Footage Distribution</div>
- <div style="position:relative;height:250px"><canvas id="sqftChart"></canvas></div>
- </div>
- <div class="chart-card">
- <div class="chart-title">🌿 Land Sales by City</div>
- <div style="position:relative;height:250px"><canvas id="landChart"></canvas></div>
- </div>
+ <h2>Market Overview</h2>
+ <div class="chart-card full" style="padding:0;overflow:hidden">
+ <iframe src="ri-dashboard-charts.html" style="width:100%;height:620px;border:none;border-radius:12px"></iframe>
  </div>
 
  <!-- Deal Map Section -->
@@ -4212,44 +4197,7 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  const domAvg = Object.entries(domByPrice).map(([k,v]) => ({ range: k, avg: v.length ? Math.round(v.reduce((a,b)=>a+b,0)/v.length) : 0 }));
  new Chart(document.getElementById('domChart'), { type: 'bar', data: { labels: domAvg.map(d => d.range), datasets: [{ data: domAvg.map(d => d.avg), backgroundColor: [chartColors.cyan, chartColors.green, chartColors.amber, chartColors.pink, chartColors.purple], borderRadius: 6 }] }, options: { ...chartOpts, plugins: { legend: { display: false } } } });
 
- // Bedrooms
- const beds = {};
- rawData.properties.filter(p => p.beds != null && p.beds >= 0).forEach(p => { const b = p.beds > 5 ? '6+' : p.beds.toString(); beds[b] = (beds[b]||0) + 1; });
- new Chart(document.getElementById('bedsChart'), { type: 'bar', data: { labels: ['0','1','2','3','4','5','6+'], datasets: [{ data: ['0','1','2','3','4','5','6+'].map(b => beds[b]||0), backgroundColor: chartColors.purple, borderRadius: 6 }] }, options: { ...chartOpts, plugins: { legend: { display: false } } } });
-
- // Year built
- const decades = { 'Pre-1900': 0, '1900-1950': 0, '1950-1980': 0, '1980-2000': 0, '2000-2010': 0, '2010-2020': 0, '2020+': 0 };
- rawData.properties.filter(p => p.yearBuilt > 0).forEach(p => {
- if (p.yearBuilt < 1900) decades['Pre-1900']++;
- else if (p.yearBuilt < 1950) decades['1900-1950']++;
- else if (p.yearBuilt < 1980) decades['1950-1980']++;
- else if (p.yearBuilt < 2000) decades['1980-2000']++;
- else if (p.yearBuilt < 2010) decades['2000-2010']++;
- else if (p.yearBuilt < 2020) decades['2010-2020']++;
- else decades['2020+']++;
- });
- new Chart(document.getElementById('yearBuiltChart'), { type: 'bar', data: { labels: Object.keys(decades), datasets: [{ data: Object.values(decades), backgroundColor: chartColors.amber, borderRadius: 6 }] }, options: { ...chartOpts, plugins: { legend: { display: false } } } });
-
- // Sqft distribution
- const sqftRanges = { '<1000': 0, '1000-1500': 0, '1500-2000': 0, '2000-2500': 0, '2500-3000': 0, '3000+': 0 };
- rawData.properties.filter(p => p.sqft > 0).forEach(p => {
- if (p.sqft < 1000) sqftRanges['<1000']++;
- else if (p.sqft < 1500) sqftRanges['1000-1500']++;
- else if (p.sqft < 2000) sqftRanges['1500-2000']++;
- else if (p.sqft < 2500) sqftRanges['2000-2500']++;
- else if (p.sqft < 3000) sqftRanges['2500-3000']++;
- else sqftRanges['3000+']++;
- });
- new Chart(document.getElementById('sqftChart'), { type: 'bar', data: { labels: Object.keys(sqftRanges), datasets: [{ data: Object.values(sqftRanges), backgroundColor: chartColors.pink, borderRadius: 6 }] }, options: { ...chartOpts, plugins: { legend: { display: false } } } });
-
- // Land by city
- // Use computed city stats for land chart
- const landCities = Object.entries(window.computedCityStats || cityStats || {})
-   .map(([city, s]) => ({ city, landCount: s.landCount }))
-   .filter(c => c.landCount > 0)
-   .sort((a,b) => b.landCount - a.landCount)
-   .slice(0, 10);
- new Chart(document.getElementById('landChart'), { type: 'bar', data: { labels: landCities.map(c => c.city), datasets: [{ data: landCities.map(c => c.landCount), backgroundColor: chartColors.green, borderRadius: 6 }] }, options: { ...chartOpts, plugins: { legend: { display: false } } } });
+ // Old property characteristic charts removed - now using Plotly dashboard iframe
  } catch(e) { console.error('Chart init error:', e); }
  }
  // Charts initialized after data loads (see loadPropertyData().then())
