--- a/ri-dashboard-charts.html
+++ b/ri-dashboard-charts.html
@@ -9,24 +9,34 @@
         body { 
             background: #0f172a; 
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            padding: 1rem;
+            padding: 0.5rem;
+            height: 100vh;
+            overflow: hidden;
         }
         .grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 1rem;
+            gap: 0.75rem;
+            height: 100vh;
+            max-height: 460px;
         }
         .chart-card {
             background: #1e293b;
-            border-radius: 12px;
-            padding: 1rem;
+            border-radius: 10px;
+            padding: 0.75rem;
             border: 1px solid rgba(255,255,255,0.1);
+            display: flex;
+            flex-direction: column;
+        }
+        .chart-card > div:last-child {
+            flex: 1;
+            min-height: 0;
         }
         .chart-title {
             color: #e2e8f0;
-            font-size: 1rem;
+            font-size: 0.85rem;
             font-weight: 600;
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.25rem;
         }
         @media (max-width: 768px) {
             .grid { grid-template-columns: 1fr; }
