--- a/rocket-game.html
+++ b/rocket-game.html
@@ -8,6 +8,16 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { background: #000; overflow: hidden; width: 100vw; height: 100vh; font-family: 'Segoe UI', sans-serif; }
         canvas { display: block; width: 100vw; height: 100vh; }
+        #loading-overlay {
+            position: fixed; inset: 0; z-index: 9999;
+            background: radial-gradient(ellipse at center, #0a1628 0%, #000 100%);
+            display: flex; flex-direction: column; align-items: center; justify-content: center;
+            transition: opacity 0.5s ease;
+        }
+        #loading-overlay.hidden { opacity: 0; pointer-events: none; }
+        .loading-spinner { width: 50px; height: 50px; border: 3px solid rgba(0,255,255,0.2); border-top-color: #0ff; border-radius: 50%; animation: spin 1s linear infinite; }
+        .loading-text { margin-top: 16px; color: #0ff; font-size: 1rem; text-shadow: 0 0 10px #0ff; }
+        @keyframes spin { to { transform: rotate(360deg); } }
         #hud {
             position: fixed; top: 0; left: 0; width: 100%; padding: 14px 20px;
             display: flex; justify-content: space-between; pointer-events: none; z-index: 10;
@@ -67,6 +77,10 @@
     </style>
 </head>
 <body>
+    <div id="loading-overlay">
+        <div class="loading-spinner"></div>
+        <div class="loading-text">Loading...</div>
+    </div>
     <div id="hud" class="hidden">
         <div class="hud-left">
             <div class="hud-text hud-cyan" id="hud-score">SCORE: 0</div>
@@ -231,13 +245,20 @@
         rocketPivot.remove(placeholder);
         rocketPivot.add(rocketModel);
         rocketLoaded = true;
+        // Hide loading overlay
+        const loadingOverlay = document.getElementById('loading-overlay');
+        if (loadingOverlay) loadingOverlay.classList.add('hidden');
         console.log('Rocket loaded:', size);
     }, (progress) => {
         if (progress.total) {
             const pct = Math.floor((progress.loaded / progress.total) * 100);
             document.getElementById('hud-speed').textContent = 'Loading rocket: ' + pct + '%';
         }
-    }, (err) => console.warn('GLB load failed:', err));
+    }, (err) => {
+        console.warn('GLB load failed:', err);
+        const loadingOverlay = document.getElementById('loading-overlay');
+        if (loadingOverlay) loadingOverlay.classList.add('hidden');
+    });
 
     // ============ OBSTACLE POOL ============
     function createAsteroid() {
