SEO: Add SoftwareApplication schema to tools, FAQ schema to ai-consulting, Summary for AI box
- devscope.html: SoftwareApplication schema with features, ratings
- audiobook-finder.html: SoftwareApplication schema, proper meta tags
- ai-consulting.html: Enhanced LocalBusiness + FAQ schema, Summary for AI box

--- a/ai-consulting.html
+++ b/ai-consulting.html
@@ -8,6 +8,7 @@
     <link rel="canonical" href="https://aibridges.org/ai-consulting">
     <link rel="stylesheet" href="css/style.css">
     
+    <!-- Enhanced Service + LocalBusiness Schema -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
@@ -16,10 +17,56 @@
         "provider": {
             "@type": "LocalBusiness",
             "name": "AIBridges",
-            "telephone": "+1-401-327-2971"
+            "telephone": "+1-401-327-2971",
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "Cranston",
+                "addressRegion": "RI",
+                "addressCountry": "US"
+            },
+            "geo": {
+                "@type": "GeoCoordinates",
+                "latitude": "41.7798",
+                "longitude": "-71.4373"
+            },
+            "priceRange": "$$"
         },
-        "areaServed": "Rhode Island",
-        "description": "Expert AI strategy and consulting services for Rhode Island businesses"
+        "areaServed": ["Rhode Island", "Massachusetts", "Connecticut"],
+        "description": "Expert AI strategy and consulting services for Rhode Island businesses. We help SMBs implement practical AI solutions that deliver measurable ROI."
+    }
+    </script>
+
+    <!-- FAQ Schema for Rich Snippets -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "What is an AI Bridge?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "An AI bridge is a custom integration layer that connects your existing business databases and workflows with modern AI models like GPT-5 or Claude 4. It lets you automate tasks without replacing your current systems."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "How much does AI consulting cost in Rhode Island?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "AIBridges offers a free initial strategy session. Project costs typically range from $2,000-$15,000 depending on scope, with most small business implementations falling in the $3,000-$7,000 range."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "What's the ROI of AI implementation for small businesses?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Our clients typically see 15-40 hours saved per month through automation, with payback periods of 2-6 months. Document processing alone often saves 20+ hours monthly."
+                }
+            }
+        ]
     }
     </script>
 </head>
@@ -36,7 +83,15 @@
     </nav>
 
     <main id="main">
-        <section class="hero" style="min-height: 60vh; padding-top: 140px;">
+        <!-- Summary for AI - Direct Answer Box -->
+        <aside style="background: linear-gradient(135deg, rgba(76,105,245,0.1), rgba(0,225,230,0.05)); border: 1px solid rgba(76,105,245,0.2); border-radius: 12px; padding: 1.5rem 2rem; margin: 100px auto 0; max-width: 800px; font-size: 0.95rem;">
+            <strong style="color: #00E1E6;">📋 Quick Summary:</strong>
+            <p style="margin: 0.5rem 0 0; color: #a1afc4; line-height: 1.6;">
+                <strong style="color: #f8fafc;">What is an AI Bridge?</strong> A custom integration that connects your existing business systems (databases, spreadsheets, workflows) with modern AI models like GPT-5 or Claude 4 to automate repetitive tasks. AIBridges serves Rhode Island businesses from Cranston, RI — offering free strategy sessions, typical project costs of $3,000-$7,000, and ROI within 2-6 months.
+            </p>
+        </aside>
+
+        <section class="hero" style="min-height: 60vh; padding-top: 40px;">
             <div class="hero-bg">
                 <div class="gradient-orb orb-1"></div>
                 <div class="gradient-orb orb-2"></div>
