--- a/audiobook-finder.html
+++ b/audiobook-finder.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Audiobook Opportunity Finder</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Audiobook Opportunity Finder - Free Tool | AIBridges</title>
+  <meta name="description" content="Free bookmarklet that finds books without audiobook versions on any Amazon page. Perfect for audiobook narrators and producers looking for opportunities.">
+  
+  <!-- SoftwareApplication Schema -->
+  <script type="application/ld+json">
+  {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Audiobook Opportunity Finder",
+      "applicationCategory": "BrowserApplication",
+      "applicationSubCategory": "Bookmarklet",
+      "operatingSystem": "Web Browser",
+      "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+      },
+      "description": "Free bookmarklet that identifies books without audiobook versions on Amazon, helping narrators and producers find opportunities.",
+      "author": {
+          "@type": "Organization",
+          "name": "AIBridges",
+          "url": "https://aibridges.org"
+      }
+  }
+  </script>
+
   <style>
     * { box-sizing: border-box; }
     body { 
