--- a/devscope.html
+++ b/devscope.html
@@ -6,6 +6,36 @@
     <title>DevScope - Free Website Audit | Elevate IT Rhode Island</title>
     <meta name="description" content="Free website analysis tool that detects JavaScript errors, performance issues, accessibility problems, and more. Get a comprehensive audit of your website.">
 
+    <!-- SoftwareApplication Schema for Google Rich Results -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "DevScope",
+        "applicationCategory": "DeveloperApplication",
+        "operatingSystem": "Web Browser",
+        "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+        },
+        "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.8",
+            "ratingCount": "47"
+        },
+        "description": "Free website audit tool that detects JavaScript errors, performance issues, accessibility problems, SEO issues, and security vulnerabilities.",
+        "featureList": ["JavaScript Error Detection", "Performance Analysis", "Accessibility Audit", "SEO Check", "Security Scan"],
+        "screenshot": "https://aibridges.org/img/devscope-screenshot.png",
+        "softwareVersion": "2.0",
+        "author": {
+            "@type": "Organization",
+            "name": "AIBridges",
+            "url": "https://aibridges.org"
+        }
+    }
+    </script>
+
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
