Providence law firms: Add SwiftShot & CaseVault tools section, remove duplicate FAQ
- Added 'Our Legal Tools' section with SwiftShot and CaseVault cards
- Pricing badges, feature lists, CTAs
- Removed standalone faq.html (homepage already has FAQ)

--- a/providence-law-firms-ai.html
+++ b/providence-law-firms-ai.html
@@ -587,6 +587,49 @@
         </div>
     </section>
 
+    <!-- Legal Tools Section -->
+    <section class="tools-section" style="padding: 80px 0; background: linear-gradient(180deg, transparent, rgba(201, 169, 89, 0.03));">
+        <div class="container">
+            <div class="section-header">
+                <span class="section-tag">Our Legal Tools</span>
+                <h2 class="section-title">Built for Rhode Island Law Firms</h2>
+            </div>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 24px;">
+                <!-- SwiftShot -->
+                <div style="background: var(--bg-card); border: 1px solid var(--border); border-radius: 16px; padding: 32px; position: relative; overflow: hidden;">
+                    <div style="position: absolute; top: 16px; right: 16px; background: rgba(201, 169, 89, 0.2); color: var(--legal-gold); padding: 4px 12px; border-radius: 20px; font-size: 0.75rem; font-weight: 700;">$29/seat/mo</div>
+                    <div style="font-size: 2.5rem; margin-bottom: 16px;">📸</div>
+                    <h3 style="font-size: 1.4rem; margin-bottom: 8px;">SwiftShot</h3>
+                    <p style="color: var(--accent); font-size: 0.9rem; margin-bottom: 12px;">Court-Ready Web Evidence Capture</p>
+                    <p style="color: var(--text-muted); margin-bottom: 20px;">Capture, annotate, and preserve web evidence with tamper-proof WORM storage and SHA-256 hash verification. Perfect for social media posts, website changes, and online evidence that might disappear.</p>
+                    <ul style="color: var(--text-muted); font-size: 0.9rem; margin-bottom: 20px; padding-left: 20px;">
+                        <li>Chrome extension for instant capture</li>
+                        <li>Automatic timestamps & metadata</li>
+                        <li>Chain of custody documentation</li>
+                        <li>Export for court submission</li>
+                    </ul>
+                    <a href="/swiftshot" class="btn btn-secondary" style="width: 100%; justify-content: center;">Learn More →</a>
+                </div>
+                
+                <!-- CaseVault -->
+                <div style="background: var(--bg-card); border: 1px solid var(--border); border-radius: 16px; padding: 32px; position: relative; overflow: hidden;">
+                    <div style="position: absolute; top: 16px; right: 16px; background: rgba(0, 225, 230, 0.2); color: var(--accent); padding: 4px 12px; border-radius: 20px; font-size: 0.75rem; font-weight: 700;">FREE</div>
+                    <div style="font-size: 2.5rem; margin-bottom: 16px;">⚖️</div>
+                    <h3 style="font-size: 1.4rem; margin-bottom: 8px;">CaseVault</h3>
+                    <p style="color: var(--accent); font-size: 0.9rem; margin-bottom: 12px;">Settlement Benchmark Database</p>
+                    <p style="color: var(--text-muted); margin-bottom: 20px;">Search 2,300+ real PI settlements across Rhode Island and New England. Filter by injury type, venue, insurance carrier. Know what similar cases actually settled for before you negotiate.</p>
+                    <ul style="color: var(--text-muted); font-size: 0.9rem; margin-bottom: 20px; padding-left: 20px;">
+                        <li>Real settlement data, anonymized</li>
+                        <li>Filter by injury, venue, carrier</li>
+                        <li>Median & range calculations</li>
+                        <li>Contribute your own settlements</li>
+                    </ul>
+                    <a href="/casevault" class="btn btn-primary" style="width: 100%; justify-content: center;">Access Free →</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="privacy-section">
         <div class="container">
             <div class="privacy-box">
