Fix Newport page: compress image (1.3MB→178KB), fix path
- Converted PNG to JPG (85% quality)
- Fixed relative path to absolute (/img/...)
- Updated og:image tag

--- a/newport-hospitality-ai.html
+++ b/newport-hospitality-ai.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="AI for Newport Hospitality & Tourism | AIBridges">
     <meta property="og:description" content="Staff scheduling, reservations, and automation for Newport's seasonal businesses.">
     <meta property="og:url" content="https://aibridges.org/newport-hospitality-ai">
-    <meta property="og:image" content="https://aibridges.org/img/newport-sailboats.png">
+    <meta property="og:image" content="https://aibridges.org/img/newport-sailboats.jpg">
     <meta property="og:type" content="website">
     
     <!-- LocalBusiness Schema -->
@@ -145,7 +145,7 @@
             align-items: flex-end;
             justify-content: flex-start;
             overflow: hidden;
-            background: url('img/newport-sailboats.png') center center / cover no-repeat;
+            background: url('/img/newport-sailboats.jpg') center center / cover no-repeat;
         }
         
         .hero::before {
