Newport: Center emoji icons on mobile cards

--- a/newport-weddings-ai.html
+++ b/newport-weddings-ai.html
@@ -552,7 +552,8 @@
             .stats-grid { grid-template-columns: repeat(2, 1fr); }
             .pain-grid { grid-template-columns: 1fr; }
             .solution-grid { grid-template-columns: 1fr; }
-            .solution-card { flex-direction: column; text-align: center; }
+            .solution-card { flex-direction: column; text-align: center; align-items: center; }
+            .solution-icon { margin: 0 auto 16px; }
             .pricing-grid { grid-template-columns: 1fr; }
             .pricing-card.featured { transform: none; }
             .nav-links { display: none; }
