--- a/newport-hospitality-ai.html
+++ b/newport-hospitality-ai.html
@@ -439,12 +439,20 @@
         
         @media (max-width: 768px) {
             .hero {
-                min-height: 70vh;
-                background-position: 70% center;
+                min-height: 85vh;
+                background-position: 70% 30%;
             }
-            .staffsync-box { grid-template-columns: 1fr; }
+            .hero-content { text-align: center; }
+            .badge { margin-left: auto; margin-right: auto; }
+            .staffsync-box { grid-template-columns: 1fr; text-align: center; }
+            .staffsync-box > div { align-items: center; }
             .nav-links { display: none; }
-            .cta-row { flex-direction: column; }
+            .cta-row { flex-direction: column; align-items: center; }
+            .btn { width: 100%; justify-content: center; }
+            .pain-grid { grid-template-columns: 1fr; }
+            .pain-card { text-align: center; }
+            .solution-card { text-align: center; align-items: center; }
+            .solution-icon { margin: 0 auto 16px; }
         }
     </style>
 </head>
