--- a/providence-law-firms-ai.html
+++ b/providence-law-firms-ai.html
@@ -513,12 +513,20 @@
                 backdrop-filter: blur(10px);
                 -webkit-backdrop-filter: blur(10px);
             }
-            .privacy-box { grid-template-columns: 1fr; }
+            .privacy-box { grid-template-columns: 1fr; text-align: center; }
+            .privacy-box .privacy-item { align-items: center; }
             .nav-links { display: none; }
-            .cta-row { flex-direction: column; }
+            .cta-row { flex-direction: column; align-items: center; }
             .btn {
                 width: 100%;
                 justify-content: center;
+            }
+            .use-case-grid { grid-template-columns: 1fr; }
+            .use-case { text-align: center; align-items: center; }
+            .use-case-icon { margin: 0 auto 16px; }
+            .tool-card { text-align: center; }
+            .tool-card .tool-icon { margin: 0 auto 16px; }
+            .hero-content { text-align: center;
             }
         }
     </style>
