Add RI Real Estate + Wedding AI to mobile menu

--- a/index.html
+++ b/index.html
@@ -595,6 +595,8 @@
         .mobile-menu.active a:nth-child(3) { transition-delay: 0.2s; }
         .mobile-menu.active a:nth-child(4) { transition-delay: 0.25s; }
         .mobile-menu.active a:nth-child(5) { transition-delay: 0.3s; }
+        .mobile-menu.active a:nth-child(6) { transition-delay: 0.35s; }
+        .mobile-menu.active a:nth-child(7) { transition-delay: 0.4s; }
 
         .mobile-menu a:hover,
         .mobile-menu a:focus {
@@ -3843,9 +3845,10 @@
     <div class="mobile-menu" id="mobileMenu" role="dialog" aria-modal="true" aria-label="Navigation menu" aria-hidden="true">
         <a href="#services" data-mobile-link>Services</a>
         <a href="products.html" data-mobile-link>Products</a>
+        <a href="ri-report" data-mobile-link>RI Real Estate</a>
+        <a href="wedding-app" data-mobile-link>Wedding AI</a>
         <a href="#demo" data-mobile-link>AI Demo</a>
         <a href="blog.html" data-mobile-link>Blog</a>
-        <a href="#private-ai" data-mobile-link>Private AI</a>
         <a href="#contact" data-mobile-link>Contact Us</a>
     </div>
 
